applications/test/test-app-gateway/deploy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-app-gateway
  namespace: networking
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-tls
        namespace: networking
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            test-app-gateway: "true"
  - name: http-redirect
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: All
